<resources>
    <string name="app_name">Movies</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supersede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="movie">movie</string>
    <string name="description">description</string>
    <string name="connection_error">Connection error</string>
    <string name="movie_poster">movie_poster</string>
    <string name="subtitle">subtitle</string>
    <string name="movie_info">Movie Info</string>
    <string name="release_date">Release Date:</string>
    <string name="year">2022</string>
    <string name="rating">Rating:</string>
    <string name="runtime">Duration:</string>
    <string name="overview">Overview</string>
    <string name="error_message">Error Message</string>
    <string name="network_error">Network Error</string>
    <string name="end_of_list">Reached end of movie lists</string>
    <string name="rating_star">rating_star</string>
</resources>